router/apollo-router/src/plugins/authorization/snapshots/apollo_router__plugins__authorization__scopes__tests__interface_type-2.snap
---
source: apollo-router/src/plugins/authorization/scopes.rs
expression: "TestResult {\n    query: QUERY,\n    extracted_scopes: &extracted_scopes,\n    scopes: [\"itf\".to_string()].into_iter().collect(),\n    result: doc,\n    paths,\n}"
---
query:

        query {
            test
            itf {
                id
            }
        }
        
extracted_scopes: {"itf"}
request scopes: ["itf"]
filtered:
query {
  test
}

paths: ["/itf"]
