router/apollo-router/src/plugins/authorization/snapshots/apollo_router__plugins__authorization__scopes__tests__scalar.snap
---
source: apollo-router/src/plugins/authorization/scopes.rs
expression: "TestResult {\n    query: QUERY,\n    extracted_scopes: &extracted_scopes,\n    scopes: Vec::new(),\n    result: doc,\n    paths,\n}"
---
query:

        query {
            topProducts {
                type
                internal
            }
        }
        
extracted_scopes: {"internal", "test"}
request scopes: []
filtered:
query {
  topProducts {
    type
  }
}

paths: ["/topProducts/internal"]
